# free-chess

./: .gitignore  App.tsx  CONTRIBUTING.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  app.json  package-lock.json  package.json  tsconfig.test.json
docs/: CHANGELOG-1.10.0-2026-06-18.md  CHANGELOG-1.11.0-2026-06-18.md  CHANGELOG-1.2.0-2026-06-11.md  CHANGELOG-1.3.0-2026-06-12.md  CHANGELOG-1.4.0-2026-06-12.md  CHANGELOG-1.5.0-2026-06-12.md  CHANGELOG-1.7.0-2026-06-13.md  CHANGELOG-1.9.0-2026-06-15.md  HANDOFF_CURRENT.md  RELEASE_CHECKLIST.md  STAGE_9_STOCKFISH_PLAN.md
modules/stockfish-engine/: expo-module.config.json  index.ts  package.json
modules/stockfish-engine/android/: build.gradle
modules/stockfish-engine/android/src/main/cpp/: CMakeLists.txt
modules/stockfish-engine/android/src/main/java/com/knowles/stockfish/: StockfishEngineModule.kt  StockfishProcess.kt
plugins/: withStockfishPackaging.js
scripts/: generate-free-chess-art.py  verify-stockfish-android.mjs
src/components/Board/: ChessBoard.tsx  boardCoordinates.test.ts  boardCoordinates.ts
src/components/Clock/: ClockSettingsModal.tsx  PlayerClockPanel.tsx
src/data/lessons/: lessonCatalog.test.ts  lessonCatalog.ts
src/engine/: ChessEngine.ts  SimpleEngine.ts  StockfishEngine.ts  defaultEngine.ts  engineManager.test.ts  engineManager.ts  uci.test.ts  uci.ts
src/game/: chessState.test.ts  chessState.ts  customPosition.test.ts  customPosition.ts  customPositionStorage.ts  gameAnalysis.test.ts  gameAnalysis.ts  gameLibraryStorage.ts  gameRecord.test.ts  gameRecord.ts  importedTraining.test.ts  lessonRuntime.test.ts  lessonRuntime.ts  series.test.ts  series.ts  seriesStorage.ts  userProfile.test.ts  userProfile.ts  userProfileStorage.ts
src/screens/: GameLibraryScreen.tsx  InteractiveLessonScreen.tsx  LearnScreen.tsx  PlayScreen.tsx  PositionEditorScreen.tsx  ReviewScreen.tsx  SeriesDetailScreen.tsx  SeriesSetupScreen.tsx  UserProfilesScreen.tsx
src/theme/: ThemeProvider.tsx  index.ts  skins.test.ts  skins.ts  storage.ts  types.ts
